fixed spacing

--- a/mainPage.css
+++ b/mainPage.css
@@ -25,7 +25,7 @@ body {
 }
 
 .spacing-within-columns{
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 /* Custom page footer */
